--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,128 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261575285731870%22%3A%22Exgq0EYn%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.663Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "datr",
+        "value": "ErAxaIXi-o1UMbaVqpC1TW7T",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "sb",
+        "value": "ErAxaNcCJQfTIFHKwXtG2DJ0",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61575285731870",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "fr",
+        "value": "0tjtW2iga2AkAtxF6.AWdxvRk--M4EyoOE3TSav4elCYQnmHfvoLG2eygUbXq6j2AvbMY.BoNG0p..AAA.0.0.BoNG7u.AWdctS9gft3CpPnBB8eDEVVFzZk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "xs",
+        "value": "50%3A0VxdVOawz9POIg%3A2%3A1748266735%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "dpr",
+        "value": "1.6187498569488525",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "wd",
+        "value": "445x886",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100429728%3BT%3A29140589",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B910x450x1.2949999570846558",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2833%3Btimestamp%3A1748435384",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-28T13:57:37.664Z",
+        "lastAccessed": "2025-05-28T13:57:37.664Z"
+    }
+            ]
